cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_STANDARD 14)

project(aoc2015)

add_subdirectory(d1)
add_subdirectory(d2)
add_subdirectory(d3)
add_subdirectory(d4)
add_subdirectory(d5)
add_subdirectory(d6)
add_subdirectory(d7)
add_subdirectory(d8)
add_subdirectory(d9)
add_subdirectory(d10)
add_subdirectory(d11)
add_subdirectory(d12)
add_subdirectory(d13)
add_subdirectory(d14)
add_subdirectory(d15)
add_subdirectory(d16)
add_subdirectory(d17)
add_subdirectory(d18)
add_subdirectory(d19)
add_subdirectory(d20)
add_subdirectory(d21)
add_subdirectory(d22)
add_subdirectory(d23)
add_subdirectory(d24)
add_subdirectory(d25)
